[Chore] Refactor Code

--- a/jasmine-standalone-2.4.1/SpecRunner.html
+++ b/jasmine-standalone-2.4.1/SpecRunner.html
@@ -15,10 +15,10 @@
 
 
   <!-- include source files here... -->
-  <script src="../src/cp1.js"></script>
+  <script src="../src/InvertedIndex.js"></script>
 
-  <!-- include spec files here... -->
-  <script src="spec/cp1.test.js"></script>
+  <!-- include spec files here...-->
+  <script src="spec/InvertedIndexTest.js"></script>
 
 </head>
 
